--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
                 height:300px;
                 background-image: radial-gradient(circle,red 4%,green 10%,yellow 30%);
             }
+            #g2{
+                height:300px;
+                background-image: linear-gradient(to bottom right,red 4%,green 10%,yellow 30%);
+            }
         </style>
     </head>
     <body>
         <div id="g1"></div>
+        <div id="g2"></div>
     </body>
 </html>
